---------------------------------------------------------------------------------------------------
Version: 0.00.00
Date: 00. 00. 0000
  Features:
    -
  Changes:
    -
  Bugfixes:
    - Fixed a few minor UI issues related to the production table
    - Fixed a minor rounding issue with compact view machines

---------------------------------------------------------------------------------------------------
Version: 1.1.48
Date: 24. 05. 2022
  Changes:
    - Re-added the 'put into cursor' action to the main interface (bound to a simple left click on machines and beacons)
  Bugfixes:
    - Fixed a migration issue under certain circumstances

---------------------------------------------------------------------------------------------------
Version: 1.1.47
Date: 23. 05. 2022
  Changes:
    - Updated Russian localisation (Thanks Astorin!)
    - The preference to hide crating recipes now also works for the 'Deadlock's Crating Machine' mod

---------------------------------------------------------------------------------------------------
Version: 1.1.46
Date: 22. 05. 2022
  Bugfixes:
    - Fixed a crash when opening the main interface in some circumstances

---------------------------------------------------------------------------------------------------
Version: 1.1.45
Date: 22. 05. 2022
  Bugfixes:
    - Fixed a couple of locale issues
    - Re-fixed a crash related to item search rate limiting

---------------------------------------------------------------------------------------------------
Version: 1.1.44
Date: 21. 05. 2022
  Changes:
    - Updated Korean localisation (Thanks x2605!)
    - Added partial Portuguese localisation (Thanks ctgPi!)

---------------------------------------------------------------------------------------------------
Version: 1.1.43
Date: 21. 05. 2022
  Bugfixes:
    - Fixed a crash when loading a previous save in very specific circumstances
    - Fixed a crash related to item search rate limiting