@@ -6,6 +6,7 @@ Date: 00. 00. 0000
   Changes:
     -
   Bugfixes:
+    - Fixed fuel not being shown in the compact view
     - Fixed a few minor UI issues related to the production table
     - Fixed a minor rounding issue with compact view machines
 
